--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AldoWeb</title>
-  <link rel="stylesheet" href="styles/styles.css">
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Charmonman&family=Nunito+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Charmonman&family=Nunito+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="img/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="assets/images/cloud.png" alt="cloud-img">
     <h4>Hola, soy</h4>
     <h1>Aldo Kalid</h1>
     <h2>Un programador no tan novato</h2>
-    <img class="bottom-cloud" src="img/cloud.png" alt="cloud-img">
-    <img src="img/mountain.png" alt="cloud-img">
+    <img class="bottom-cloud" src="assets/images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="assets/images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -103,5 +102,8 @@
     <a class="footer-link" href="https://github.com/aldokalid">GitHub</a>
     <p class="copyright">© 2022 Aldo Kalid.</p>
   </div>
+
+  <script src="assets/bundle.js"></script>
 </body>
+
 </html>
